# haskell-training

./: .gitignore  IOPerson.hs  IOScreen.hs  IOSession.hs  Test-applicatives-typeclasses.hs  Test-histogram-dataypes.hs  Test-tree.hs  TestForLoop.hs  TestReadIO.hs
.github/workflows/: haskell.yml
99-questions/: Questions1-28.hs  Questions31-41.hs
advent-of-code-2020/: day1.hs  day2.hs
animation/: CHANGELOG.md  animation.cabal
animation/app/: Main.hs
animation/lib/Create/: Box.hs
